# maser

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: tests.yml
app/: app.py  csv_header.txt  index.html  requirements.txt
app/frontend/: index.html  inputs.js  style.css  style.mplstyle
app/static/: inputs.js
examples/: numba speedup.py  plot example.py  plot.py
notebooks/: Capstone1.ipynb  Fresh_copy.ipynb  Fresher_copy.ipynb  GJ625.ipynb  Maser_and_ACF.ipynb  Maser_and_BLS.ipynb  Super_fresh_copy.ipynb  Two_planets.ipynb  ben_diagrams.ipynb  helper_functions.py  maser1.py  sandbox.ipynb
src/maser/: __init__.py  constants.py  maser.py  model.py
src/maser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
static/: style.css
tests/: test_maser.py
