[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "maser"
version = "1.1"
requires-python = ">=3.11"
dependencies = ["numpy>1.23"]
authors = [{name = "Robert Kavanagh"}]
license = "MIT"
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]